# cacaboxParty

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  database_connector.cpp  database_connector.h  logger.h  main.cpp
db/: schemas.sql
